# ChangeLog for dev-util/dmake
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/dmake/ChangeLog,v 1.17 2007/05/15 09:10:31 bangert Exp $

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  01 Apr 2007; Anant Narayanan <anant@gentoo.org> dmake-4.1-r1.ebuild:
  Fix homepage URI, closes bug #172788

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  07 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> dmake-4.1-r1.ebuild:
  Stable on ppc.

  29 Jul 2005; Daniel Black <dragonheart@gentoo.org> dmake-4.1-r1.ebuild:
  removed die from epatch || die.

  07 May 2005; David Holm <dholm@gentoo.org> dmake-4.1-r1.ebuild:
  Added to ~ppc.

  22 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> dmake-4.1-r1.ebuild:
  added ~amd64 to KEYWORDS, fixes #83157

  27 Dec 2004; Seemant Kulleen <seemant@gentoo.org> dmake-4.1-r1.ebuild:
  HOMEPAGE and SRC_URI fix thanks to: Adam Chodorowski <adam@chodorowski.com>
  in bug #68646

  12 Dec 2004; Sven Wegener <swegener@gentoo.org> dmake-4.1-r1.ebuild:
  Tidied the ebuild. Fixed broken Manifest.

  06 Nov 2004; <pyrania@gentoo.org> dmake-4.1-r1.ebuild:
  Hooray for epatch.

  12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> dmake-4.1-r1.ebuild:
  Don't assign default to S; header fix

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*dmake-4.1-r1 (1 Feb 2002)

  10 Mar 2003; Stefan Jones <cretin@gentoo.org> :
  Added patch to fix errno in newer glibc and merged sed lines also int patch

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you