@@ -1,5 +1,5 @@
 AUX dmake-4.1-r1.diff 5005 RMD160 1850bd6061b9b3ea5573ddc630f3d2ea34e08c5b SHA1 d224098328f0dc54b7c7f0a14ab0b1b61c93424a SHA256 fefc508c0a55740f41a1f1cac85c12227be847e6013368e1db19fe1405fb22e3
 DIST dmake-4.1pl1-src.tar.gz 473427 RMD160 ba76d48a6057b6af01b8abd7c72cc7521f60a983 SHA1 6262a38d58fdb69242ddfe663be9caada1882d64 SHA256 98aca7d485e1c6284b439d6e7636b7636d9969869bbc190f27eba475d4cacc6f
-EBUILD dmake-4.1-r1.ebuild 876 RMD160 7787a1fbaf9230f496b65dc6058cf92a19974900 SHA1 3a60d15a1422fedcc748de899c2ab6b7d3f7e467 SHA256 98fc8750eb62d7fa892cac735f2523ead68f2b94a64415a6b3a8b8607c8f09d4
-MISC ChangeLog 2049 RMD160 cfb2bce5444fc52fa31f28389007bc4901ff3b18 SHA1 4ab9fa755729bc17ee3b1ac8e4bde4f92288f285 SHA256 9d73dd3558a7bf182a8e5be67fe497207d1fbcc58ba754d293decb23fa0a1b3a
+EBUILD dmake-4.1-r1.ebuild 993 RMD160 de6b91bc07ce7f3e64516c65ba713ee468c3c2a1 SHA1 50a87091970a7718ec9772af69543c9f294f9bbc SHA256 2428138abf543f6740b67188e42d067d80be986d02f4f130fdaf072695933c61
+MISC ChangeLog 2203 RMD160 de5356bc9d9d4fdc9648261626ce18735bbe81e7 SHA1 a1238d8992cd209285d4261111480a83fb14552c SHA256 ab8e3d16deb0d9b0ca9ffcc653d8df2f029da51aaf1c24e4810cb2b0b76efa42
 MISC metadata.xml 231 RMD160 c13056229989c3d4f448a7c7abcff3f4ee7ce13c SHA1 2d63dfb700b223f8f37c078692a81b2237896bce SHA256 4595c2615fd7c9095517949b1a920d4457f92801eb9d46307b18aafe58ec2a8a
